Google Sheets Issue: Window freezing when activating extension pop-up. Bug: Not breaking out of final hash loop. Cause: Google modified URL behavior. Changing gid hash no longer activates sheets. Update: Display error message if end of final loop is reached. Note: Investigating alternative solution for identifying visible sheets.

--- a/options.css
+++ b/options.css
@@ -183,6 +183,7 @@ input[type="number"].empty {
 }
 
 .gid {
-  font-size : 1rem;
-  font-style: italic;
+  font-size  : 1rem;
+  font-style : italic;
+  white-space: nowrap;
 }
